<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textview_cell_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/textview_sense_title"
            android:textColor="@color/colorLight"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <GridView
            android:id="@+id/gridview_sense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_cell_title"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:numColumns="2"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp" />

        <TextView
            android:id="@+id/textview_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gridview_sense"
            android:text="@string/textview_activity_title"
            android:textColor="@color/colorLight"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textview_activity_result"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/textview_activity_title"
            android:text=""
            android:textColor="@color/colorLight"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/button_sense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_training"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button_sense_title"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_training"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/button_training_title"
            android:fontFamily="sans-serif-thin"
            android:textSize="24sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>